--- a/manifest.json
+++ b/manifest.json
@@ -6,13 +6,7 @@
   "content_scripts": [
     {
       "matches": ["*://www.facebook.com/*"],
-      "js": ["content.js", "options.js", "background.js"]
+      "js": ["content.js"]
     }
-  ],
-  "action": {
-    "default_popup": "options.html"
-  },
-  "background": {
-    "service_worker": "background.js"
-  }
+  ]
 }
